<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.td2devmobile.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_earth"
            android:name="com.example.td2devmobile.ui.earth.EarthFragment"
            android:label="@string/title_earth"
            tools:layout="@layout/activity_main" />

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.td2devmobile.ui.animations.AnimationsFragment"
            android:label="@string/title_animation"
            tools:layout="@layout/fragment_animations" />
</navigation>
